--- a/penidathreedaytwonight.html
+++ b/penidathreedaytwonight.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <div class="text-content">
                             <h4>€300 - €4000</h4>
-                            <h2>Nusa Penida.</h2>
+                            <h2>Nusa Penida, Three Day Two Night Tour.</h2>
                         </div>
                     </div>
                 </div>
