--- a/ijen-packages-list.html
+++ b/ijen-packages-list.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <div class="text-content">
                             <h4>Packages</h4>
-                            <h2>Nusa Penida</h2>
+                            <h2>Kawah Ijen</h2>
                         </div>
                     </div>
                 </div>
