--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container-fluid">
             <div class="owl-banner owl-carousel">
                 <div class="item">
-                    <img src="assets/images/product-1-720x480.jpg" alt="">
+                    <img src="assets/images/penida2.jpg" alt="">
                     <div class="item-content">
                         <div class="main-content">
                             <div class="meta-category">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="assets/images/product-2-720x480.jpg" alt="">
+                    <img src="assets/images/bromo.jpg" alt="">
                     <div class="item-content">
 
                         <div class="main-content">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="assets/images/product-3-720x480.jpg" alt="">
+                    <img src="assets/images/gunungijen.jpg" alt="">
                     <div class="item-content">
 
                         <div class="main-content">
@@ -130,7 +130,7 @@
                                 <span> $300.00 - $400.00 </span>
                             </div>
 
-                            <a href="car-details.html">
+                            <a href="ijen-packages-list.html">
                                 <h4>Ijen Mountain.</h4>
                             </a>
 
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="assets/images/product-4-720x480.jpg" alt="">
+                    <img src="assets/images/balitour.jpg" alt="">
                     <div class="item-content">
 
                         <div class="main-content">
@@ -152,7 +152,7 @@
                                 <span> $300.00 - $400.00 </span>
                             </div>
 
-                            <a href="car-details.html">
+                            <a href="bali-package-list.html">
                                 <h4>Bali Tour.</h4>
                             </a>
 
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="assets/images/product-5-720x480.jpg" alt="">
+                    <img src="assets/images/malang2.jpg" alt="">
                     <div class="item-content">
 
                         <div class="main-content">
@@ -174,7 +174,7 @@
                                 <span> $300.00 - $400.00 </span>
                             </div>
 
-                            <a href="car-details.html">
+                            <a href="malang-package-list.html">
                                 <h4>Malang City.</h4>
                             </a>
 
@@ -200,11 +200,11 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="blog-post">
                                 <div class="blog-thumb">
-                                    <img src="assets/images/product-4-720x480.jpg" alt="">
+                                    <img src="assets/images/penida-1.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <span> $300.00 - $400.00 </span>
-                                    <a href="penida-halfday.html">
+                                    <a href="penidahalfday.html">
                                         <h4>Nusa Penida, Halfday Tour</h4>
                                     </a>
                                     <p>Nullam nibh mi, tincidunt sed sapien ut, rutrum hendrerit velit. Integer auctor a mauris sit amet eleifend.</p>
@@ -224,7 +224,7 @@
                         <div class="col-md-4 col-sm-6">
                             <div class="blog-post">
                                 <div class="blog-thumb">
-                                    <img src="assets/images/product-5-720x480.jpg" alt="">
+                                    <img src="assets/images/bromo2.webp" alt="">
                                 </div>
                                 <div class="down-content">
                                     <span> $300.00 - $400.00 </span>
@@ -432,7 +432,7 @@
                     <div class="col-lg-12">
                         <div class="copyright-text">
                             <p>
-                                Copyright © 2020 Company Name | Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a>
+                                Copyright © 2020 <a href="https://kawanlelah.id/">Kawanlelah.id</a>
                             </p>
                         </div>
                     </div>
