--- a/penidaonedayonenight.html
+++ b/penidaonedayonenight.html
@@ -156,7 +156,15 @@
                         </div>
 
                         <div class="content">
-                            <p>- Available: Spring <br> - 20 nights <br> - Flight included <br> - 6 Regeneration Road, SE16 2NX, London</p>
+                            <p>- Available: Everyday
+                                <br> - Kelingking Cliff
+                                <br> - Broken Beach
+                                <br> - Angels Billabong
+                                <br> - Crystal Bay
+                                <br> - Diamond Beach
+                                <br> - Pulau Seribu
+                                <br> - Rumah Pohon
+                            </p>
                         </div>
                     </div>
 
@@ -244,7 +252,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>Availability &amp; Prices</h2>
+                    <h2> Prices</h2>
                 </div>
 
                 <div class="content">
@@ -253,38 +261,41 @@
                             <thead>
                                 <tr>
                                     <th>Package</th>
-                                    <th>From</th>
-                                    <th>To</th>
                                     <th>Price</th>
+                                    <th>Amount</th>
                                 </tr>
                             </thead>
 
                             <tbody>
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
+                                    <td>1</td>
+                                    <td>Rp 1.700.000</td>
+                                    <td>Rp 1.700.000</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 4000 total price</td>
+                                    <td>2</td>
+                                    <td>Rp 950.000</td>
+                                    <td>Rp 1.900.000</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Rp 800.000</td>
+                                    <td>Rp 2.400.000</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Rp 700.000</td>
+                                    <td>Rp 2.800.000</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Rp 650.000</td>
+                                    <td>Rp 3.250.000</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Rp 625.000</td>
+                                    <td>Rp 3.750.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -297,7 +308,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>Info</h2>
+                    <h2>details</h2>
                 </div>
 
                 <div class="content">
@@ -306,7 +317,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p class="pjVpProductPolicyTitle">
-                                        <strong>Check-in</strong>
+                                        <strong>Schedule</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
@@ -321,7 +332,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Check-out</strong>
+                                        <strong>Facilities</strong>
                                     </p>
                                 </div>
 
@@ -337,7 +348,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Pets</strong>
+                                        <strong>Suggested</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
@@ -352,28 +363,9 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Policies</strong>
+                                        <strong>Notes</strong>
                                     </p>
                                 </div>
-                                <div class="col-md-10 col-sm-9">
-                                    <div>
-                                        <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-
-                        <li class="list-group-item">
-                            <div class="row">
-                                <div class="col-md-2 col-sm-3">
-                                    <p>
-                                        <strong>Fees</strong>
-                                    </p>
-                                </div>
-
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
