--- a/penidathreedaytwonight.html
+++ b/penidathreedaytwonight.html
@@ -156,7 +156,18 @@
                         </div>
 
                         <div class="content">
-                            <p>- Available: Spring <br> - 20 nights <br> - Flight included <br> - 6 Regeneration Road, SE16 2NX, London</p>
+                            <p>- Available: Everyday
+                                <br> - Kelingking Cliff
+                                <br> - Broken Beach
+                                <br> - Angels Billabong
+                                <br> - Crystal Bay
+                                <br> - Tembeling
+                                <br> - Diamond Beach
+                                <br> - Pulau Seribu
+                                <br> - Rumah Pohon
+                                <br> - Atuh Beach
+                                <br> - Pura Giri Putri
+                            </p>
                         </div>
                     </div>
 
@@ -244,7 +255,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>Availability &amp; Prices</h2>
+                    <h2>Prices</h2>
                 </div>
 
                 <div class="content">
@@ -253,38 +264,42 @@
                             <thead>
                                 <tr>
                                     <th>Package</th>
-                                    <th>From</th>
-                                    <th>To</th>
                                     <th>Price</th>
+                                    <th>Amount</th>
                                 </tr>
                             </thead>
 
                             <tbody>
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
+                                    <td>1</td>
+                                    <td>Rp 3.200.000</td>
+                                    <td>Rp 3.200.000</td>
                                 </tr>
 
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
+                                    <td>2</td>
+                                    <td>Rp 1.900.000</td>
+                                    <td>Rp 3.800.000</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 4000 total price</td>
+                                    <td>3</td>
+                                    <td>Rp 1.600.000</td>
+                                    <td>Rp 4.800.000</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Rp 1.450.000</td>
+                                    <td>Rp 5.800.000</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Rp 1.350.000</td>
+                                    <td>Rp 6.750.000</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Rp 1.300.000</td>
+                                    <td>Rp 7.800.000</td>
                                 </tr>
                             </tbody>
                         </table>
