--- a/penidahalfday.html
+++ b/penidahalfday.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <div class="text-content">
                             <h4>€300 - €4000</h4>
-                            <h2>Nusa Penida, Halfday Tour.</h2>
+                            <h2>Nusa Penida, West Halfday Tour.</h2>
                         </div>
                     </div>
                 </div>
@@ -157,10 +157,11 @@
 
                         <div class="content">
                             <p>- Available: everyday
-                                <br> - 20 nights
-                                <br> - Flight included
-                                <br> - 6 Regeneration Road, SE16 2NX, London
-                                <br> - 20 nights
+                                <br> - Kelingking Beach
+                                <br> - Pohon Cinta
+                                <br> - Broken Beach
+                                <br> - Angel’s Billabong
+                                <br> - Crystal Bay
                             </p>
                         </div>
                     </div>
@@ -249,7 +250,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>Availability &amp; Prices</h2>
+                    <h2> Prices</h2>
                 </div>
 
                 <div class="content">
@@ -258,38 +259,43 @@
                             <thead>
                                 <tr>
                                     <th>Package</th>
-                                    <th>From</th>
-                                    <th>To</th>
                                     <th>Price</th>
+                                    <th>Amount</th>
                                 </tr>
                             </thead>
 
                             <tbody>
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
+                                    <td>1</td>
+                                    <td>Rp 800.000</td>
+                                    <td>Rp 800.000</td>
                                 </tr>
 
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
+                                    <td>2</td>
+                                    <td>Rp 525.000</td>
+                                    <td>Rp 1.050.000</td>
                                 </tr>
 
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 300 per night</td>
+                                    <td>3</td>
+                                    <td>Rp 435.000</td>
+                                    <td>Rp 1.305.000</td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td>01-06-2020</td>
-                                    <td>31-12-2020</td>
-                                    <td>€ 4000 total price</td>
+                                    <td>4</td>
+                                    <td>Rp 375.000</td>
+                                    <td>Rp 1.500.000</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Rp 350.000</td>
+                                    <td>Rp 1.750.000</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Rp 325.000 </td>
+                                    <td>Rp 1.950.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -302,7 +308,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>Info</h2>
+                    <h2>Details</h2>
                 </div>
 
                 <div class="content">
@@ -311,12 +317,13 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p class="pjVpProductPolicyTitle">
-                                        <strong>Check-in</strong>
+                                        <strong>Schedule</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        07.30 : Bertemu di Pantai Sanur<br> 08.00 : Boat berangkat menuju Nusa Penida<br> 08.45 : Boat tiba di Nusa Penida<br> 09.30 : Mengunjungi Broken Beach & Angels Billabong<br> 12.00 : Mengunjungi Kelingking Beach
+                                        & Paluang Cliff<br> 13.00 : Makan Siang<br> 14.30 : MengunjungiCrystalBay<br> 16.00 : Kembali ke Dermaga<br> 16.30 : Boat berangkat menuju Pantai Sanur<br> 17.30 : Tiba di Pantai Sanur<br>
                                     </p>
                                 </div>
                             </div>
@@ -326,13 +333,13 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Check-out</strong>
+                                        <strong>Facilities</strong>
                                     </p>
                                 </div>
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        Tiket Boat PP Sanur-Penida,<br> Mobil + BBM + Driver/Guide di Penida,<br> TIket Wisata,<br> Makan Siang (Nasi Kotak)*,<br> Air Mineral<br>
                                     </p>
                                 </div>
                             </div>
@@ -342,12 +349,13 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Pets</strong>
+                                        <strong>Suggested</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Not allowed
+                                        Kaca Mata HItam,<br> Sun Block,<br> Uang Tunai,<br> Celana Pendek/Baju Ganti,<br> Sandal/Sepatu hiking atau sporty,<br> Tas Anti Air,<br> Hp,
+                                        <br> Kamera.<br>
                                     </p>
                                 </div>
                             </div>
@@ -357,33 +365,13 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Policies</strong>
+                                        <strong>Notes</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-
-                        <li class="list-group-item">
-                            <div class="row">
-                                <div class="col-md-2 col-sm-3">
-                                    <p>
-                                        <strong>Fees</strong>
-                                    </p>
-                                </div>
-
-                                <div class="col-md-10 col-sm-9">
-                                    <div>
-                                        <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
@@ -515,5 +503,7 @@
     </script>
 
 </body>
+
+</html>
 
 </html>
