--- a/penidahalfdaytimur.html
+++ b/penidahalfdaytimur.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <div class="text-content">
                             <h4>€300 - €4000</h4>
-                            <h2>Nusa Penida, Two Day One Night Tour.</h2>
+                            <h2>Nusa Penida, East Halfday Tour .</h2>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div>
-                        <img src="assets/images/product-1-720x480.jpg" alt="" class="img-fluid wc-image">
+                        <img src="assets/images/penida4.jpg" alt="" class="img-fluid wc-image">
                     </div>
 
                     <br>
@@ -109,7 +109,7 @@
                     <div class="row">
                         <div class="col-sm-4 col-6">
                             <div>
-                                <img src="assets/images/product-1-720x480.jpg" alt="" class="img-fluid">
+                                <img src="assets/images/penida-1.jpg" alt="" class="img-fluid">
                             </div>
                             <br>
                         </div>
@@ -156,16 +156,12 @@
                         </div>
 
                         <div class="content">
-                            <p>- Available: Everyday
-                                <br> - Kelingking Beach
-                                <br> - Broken Beach (Pasih Uug)
-                                <br> - Angel’s Billabong
-                                <br> - Crystal Bay
-                                <br> - Atuh Beach (Pantai Atuh)
-                                <br> - Diamond Beach
-                                <br> - Pulau Seribu/ Raja Lima
-                                <br> - Rumah Pohon (Molenteng)
-                                <br> - Bukit Teletubies
+                            <p>- Available: everyday
+                                <br> - Atuh beach
+                                <br> - Diamond beach
+                                <br> - Pulau seribu atau Raja lima
+                                <br> - Rumah pohon molenteng
+                                <br> - Bukit teletubis
                             </p>
                         </div>
                     </div>
@@ -267,36 +263,42 @@
                                     <th>Amount</th>
                                 </tr>
                             </thead>
+
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Rp 1.850.000</td>
-                                    <td>Rp 1.850.000</td>
+                                    <td>Rp 850.000</td>
+                                    <td>Rp 850.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>2</td>
-                                    <td>Rp 1.150.000 </td>
-                                    <td>Rp 2.300.000</td>
+                                    <td>Rp 550.000</td>
+                                    <td>Rp 1.100.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>3</td>
-                                    <td>Rp 950.000</td>
-                                    <td>Rp 2.850.000</td>
+                                    <td>Rp 450.000</td>
+                                    <td>Rp 1.350.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>4</td>
-                                    <td>Rp 825.000</td>
-                                    <td>Rp 3.300.000</td>
+                                    <td>Rp 400.000</td>
+                                    <td>Rp 1.600.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>5</td>
-                                    <td>Rp 750.000</td>
-                                    <td>Rp 3.750.000</td>
+                                    <td>Rp 350.000</td>
+                                    <td>Rp 1.750.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>6</td>
-                                    <td>Rp 725.000</td>
-                                    <td>Rp 4.350.000</td>
+                                    <td>Rp 325.000</td>
+                                    <td>Rp 1.950.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -309,7 +311,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>Info</h2>
+                    <h2>Details</h2>
                 </div>
 
                 <div class="content">
@@ -318,7 +320,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p class="pjVpProductPolicyTitle">
-                                        <strong>Check-in</strong>
+                                        <strong>Schedule</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
@@ -333,7 +335,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Check-out</strong>
+                                        <strong>Facilities</strong>
                                     </p>
                                 </div>
 
@@ -349,7 +351,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Pets</strong>
+                                        <strong>Suggested</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
@@ -364,28 +366,9 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Policies</strong>
+                                        <strong>Notes</strong>
                                     </p>
                                 </div>
-                                <div class="col-md-10 col-sm-9">
-                                    <div>
-                                        <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-
-                        <li class="list-group-item">
-                            <div class="row">
-                                <div class="col-md-2 col-sm-3">
-                                    <p>
-                                        <strong>Fees</strong>
-                                    </p>
-                                </div>
-
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
